--- a/style.css
+++ b/style.css
@@ -2,3 +2,10 @@
     background-image: url("triplecropped.jpg");
     background-position:top ;
 }
+.navbar{
+    overflow: hidden;
+    background: transparent;
+    position: fixed; 
+    top: 0; 
+    width: 100%;
+}
